@@ -30,8 +30,8 @@
 *   Boston, MA  02110-1301  USA
 */
 /****************************************************************
-* $Revision: 1.10 $
-* $Date: 2010/03/30 12:24:42 $
+* $Revision: 1.11 $
+* $Date: 2010/04/14 10:14:16 $
 *****************************************************************/
 
 #if defined EVO
@@ -110,7 +110,7 @@ real *calc_vect(real *x)
   }
 
 #ifdef PAIR
-  if (!disable_cp) {
+  if (enable_cp) {
     for (i = 0; i < ntypes; i++)
       vect[k++] = x[n++];
   }
