@@ -1,3 +1,9 @@
+CVS-20100414
++ [APOT] chemical potentials are now disabled by default, can be enabled with
+		 "enable_cp 1" in parameter file
++ potfit now forces the correct ntypes-setting in the parameter file
++ new information in potential files: #T <interaction>, e.g. #T EAM
+
 CVS-20100408
 + Actually, there are elements with only one letter
 
